GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Cancellation_before_end_date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_before_end_date__c</fullName>
    <formula>IF(ISBLANK(End_Date__c),FALSE,IF((ISBLANK(Cancellation_date__c)|| Cancellation_date__c &gt; End_Date__c) , FALSE, TRUE ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation before end date</label>
    <type>Checkbox</type>
</CustomField>