GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Cancellation_fee_applied__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_fee_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation fee applied</label>
    <type>Checkbox</type>
</CustomField>