GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Cancellation_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_reason__c</fullName>
    <label>Cancellation reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Withdrawal Period</fullName>
            </value>
            <value>
                <fullName>Partial Commercial Gesture</fullName>
            </value>
            <value>
                <fullName>Commercial Gesture</fullName>
            </value>
            <value>
                <fullName>Medical Condition</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>VAT Exemption</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>