GearsetPOC/force-app/main/default/objects/Subscription__c/fields/CIN__c.field-meta.xml
<CustomField>
    <fullName>CIN__c</fullName>
    <label>CIN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>