GearsetPOC/force-app/main/default/objects/Subscription__c/fields/CIN_V2__c.field-meta.xml
<CustomField>
    <fullName>CIN_V2__c</fullName>
    <formula>Member__r.DELTA_Loyalty_Member__r.MembershipNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIN_V2</label>
    <type>Text</type>
</CustomField>