GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Delivery_Account__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Account__c</fullName>
    <label>Delivery Account</label>
    <length>200</length>
    <type>Text</type>
</CustomField>