GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Delivery_Company__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Company__c</fullName>
    <label>Delivery Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>