GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Delivery_Country__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Country__c</fullName>
    <label>Delivery Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISO_2_Country_Code</valueSetName>
    </valueSet>
</CustomField>