GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Delivery_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Last_Name__c</fullName>
    <label>Delivery Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>