GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Delivery_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Postal_Code__c</fullName>
    <label>Delivery Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>