GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Delivery_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Street_Number__c</fullName>
    <label>Delivery Street + Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>