GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <formula>TEXT(Promo__r.Discount_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Type</label>
    <type>Text</type>
</CustomField>