GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Ecertificate_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Ecertificate_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ecertificate uploaded</label>
    <type>Checkbox</type>
</CustomField>