GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Ending_date__c.field-meta.xml
<CustomField>
    <fullName>Ending_date__c</fullName>
    <label>Ending date</label>
    <type>Date</type>
</CustomField>