GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Exempt_from_VAT__c.field-meta.xml
<CustomField>
    <fullName>Exempt_from_VAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt from VAT</label>
    <type>Checkbox</type>
</CustomField>