GearsetPOC/force-app/main/default/objects/Subscription__c/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <label>External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>