GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Full_Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Full_Subscription_Amount__c</fullName>
    <label>Full Subscription Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>