GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email__c</fullName>
    <label>Invoice Email</label>
    <type>Email</type>
</CustomField>