GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Invoice_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_First_Name__c</fullName>
    <label>Invoice First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>