GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Invoice_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Last_Name__c</fullName>
    <label>Invoice Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>