GearsetPOC/force-app/main/default/objects/Subscription__c/fields/New_Contact__c.field-meta.xml
<CustomField>
    <fullName>New_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>