GearsetPOC/force-app/main/default/objects/Subscription__c/fields/New_Extended_End_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Extended_End_Date__c</fullName>
    <description>Used when a Customer extends their subscription.</description>
    <label>New Extended End Date</label>
    <type>Date</type>
</CustomField>