GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Number_of_Journeys__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Journeys__c</fullName>
    <label>Number of Journeys</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>