GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Parent_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Parent_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>