GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Subscription Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>