GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Record_Lock__c.field-meta.xml
<CustomField>
    <fullName>Record_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Lock</label>
    <type>Checkbox</type>
</CustomField>