GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Starting_date__c.field-meta.xml
<CustomField>
    <fullName>Starting_date__c</fullName>
    <label>Starting date</label>
    <type>Date</type>
</CustomField>