GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Amount__c</fullName>
    <description>Amount of the Subscription Type (incl. VAT) which the Program is based on</description>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>