GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Subscription_Confirm_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Confirm_Date__c</fullName>
    <label>Subscription Confirm Date</label>
    <type>Date</type>
</CustomField>