GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Subscription_Currency__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Currency__c</fullName>
    <label>Subscription Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>