GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Subscription_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription + Invoice</label>
    <type>Checkbox</type>
</CustomField>