GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Subscription_SVOC_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_SVOC_Id__c</fullName>
    <externalId>true</externalId>
    <label>Subscription Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>