GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Type</label>
    <referenceTo>Subscription_Type__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>