GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Subscription_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type_Name__c</fullName>
    <formula>IF(ISBLANK(Product_Name__c), TEXT(Subscription_Type__r.Subscription_Category__c) + &#39; &#39; + TEXT(Subscription_Type__r.Duration__c) + &#39; Months&#39;, Product_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Type Name</label>
    <type>Text</type>
</CustomField>