GearsetPOC/force-app/main/default/objects/Subscription__c/fields/TECH_Max_Day_End_Month__c.field-meta.xml
<CustomField>
    <fullName>TECH_Max_Day_End_Month__c</fullName>
    <formula>DAY (IF (MONTH ( End_Date__c ) = 12 ,DATE ( YEAR ( End_Date__c ) , 12 , 31 ) ,DATE ( YEAR ( End_Date__c ) , MONTH ( End_Date__c ) + 1 , 1 ) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Max Day End Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>