GearsetPOC/force-app/main/default/objects/Subscription__c/fields/TECH_Max_Day_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>TECH_Max_Day_Start_Month__c</fullName>
    <formula>DAY(IF(MONTH(Start_Date__c) = 12,DATE(YEAR(Start_Date__c), 12, 31),DATE(YEAR(Start_Date__c), MONTH(Start_Date__c) + 1 , 1) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Max Day Start Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>