GearsetPOC/force-app/main/default/objects/Subscription__c/fields/TECH_MemberId__c.field-meta.xml
<CustomField>
    <fullName>TECH_MemberId__c</fullName>
    <formula>Member__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_MemberId</label>
    <type>Text</type>
</CustomField>