GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Tech_Primary__c.field-meta.xml
<CustomField>
    <fullName>Tech_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>