GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Tech_Pro_Forma_Generated__c.field-meta.xml
<CustomField>
    <fullName>Tech_Pro_Forma_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pro Forma Generated</label>
    <type>Checkbox</type>
</CustomField>