GearsetPOC/force-app/main/default/objects/Subscription__c/fields/TECH_PT_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>TECH_PT_Payment_Method__c</fullName>
    <label>TECH PT Payment Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>