GearsetPOC/force-app/main/default/objects/Subscription__c/fields/TECH_Subscription_Channel__c.field-meta.xml
<CustomField>
    <fullName>TECH_Subscription_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Subscription Channel</label>
    <type>Checkbox</type>
</CustomField>