GearsetPOC/force-app/main/default/objects/Subscription__c/fields/TECH_Total_Amount_Factor__c.field-meta.xml
<CustomField>
    <fullName>TECH_Total_Amount_Factor__c</fullName>
    <formula>CASE(
	Discount_Type__c,
		&#39;Fixed Value&#39;, Subscription_Amount__c - Discount_Value__c,
		&#39;Percentage&#39; , Subscription_Amount__c * (1 - Discount_Value__c/100),
		Subscription_Amount__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Total Amount Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>