GearsetPOC/force-app/main/default/objects/Subscription__c/fields/TECH_VAT__c.field-meta.xml
<CustomField>
    <fullName>TECH_VAT__c</fullName>
    <formula>IF(
	OR(
		VAT_Country_Code__c = &#39;BE&#39; &amp;&amp; Exempt_from_VAT__c,
		TECH_isIntraCommunautaire__c,
VAT_Country_Code__c != &#39;BE&#39; &amp;&amp; VAT_Number__c != &#39;N/A&#39;
	),
	0,
	(0.21/1.21) * TECH_Total_Amount_Factor__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>