GearsetPOC/force-app/main/default/objects/Subscription__c/fields/TECH_VAT_Applied_Factor__c.field-meta.xml
<CustomField>
    <fullName>TECH_VAT_Applied_Factor__c</fullName>
    <formula>IF(
AND(
OR(ISBLANK(VAT_Number__c),
!TECH_isIntraCommunautaire__c
),
Exempt_from_VAT__c = FALSE
)
, 1, 1.21)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Applied Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>