GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Total Amount to be paid, based on the VAT policy, the Subscription Type Amount and the related Promo.</description>
    <formula>IF ( (VAT_Country_Code__c = &quot;BE&quot;),
(TECH_Total_Amount_Factor__c / TECH_VAT_Applied_Factor__c),

IF (TECH_isIntraCommunautaire__c = TRUE || VAT_Number__c &lt;&gt; &quot;N/A&quot;,
TECH_Total_Amount_Factor__c,

TECH_Total_Amount_Factor__c / TECH_VAT_Applied_Factor__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (VAT Incl)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>