GearsetPOC/force-app/main/default/objects/Subscription__c/fields/Total_Amount_VAT_excl__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_VAT_excl__c</fullName>
    <formula>IF( VAT_Country_Code__c = &quot;BE&quot;, TECH_Total_Amount_Factor__c/1.21,

IF( TECH_isIntraCommunautaire__c = TRUE || VAT_Number__c &lt;&gt; &quot;N/A&quot;, 

TECH_Total_Amount_Factor__c,

TECH_Total_Amount_Factor__c/1.21))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (VAT excl)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>