GearsetPOC/force-app/main/default/objects/Subscription__c/fields/VAT_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>VAT_Country_Code__c</fullName>
    <formula>LEFT(VAT_Number__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Country Code</label>
    <type>Text</type>
</CustomField>