GearsetPOC/force-app/main/default/objects/Subscription__c/validationRules/Upload_E_Certificate.validationRule-meta.xml
<ValidationRule>
    <fullName>Upload_E_Certificate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($Permission.Integration_User),
    AND(
        Ecertificate_uploaded__c = False,
        PRIORVALUE(Exempt_from_VAT__c) = False,
        ISCHANGED(Exempt_from_VAT__c)
    )
)</errorConditionFormula>
    <errorMessage>Upload E-Certificate before checking Exempt from VAT</errorMessage>
</ValidationRule>