GearsetPOC/force-app/main/default/objects/Subscription__c/listViews/Active_subscriptions.listView-meta.xml
<ListView>
    <fullName>Active_subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Invoice_Account__c</columns>
    <columns>CIN__c</columns>
    <columns>Full_Subscription_Amount__c</columns>
    <columns>Subscription_Start_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Order_Reference__c</columns>
    <columns>Subscription_Type_Name__c</columns>
    <columns>Invoice_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active subscriptions</label>
</ListView>