GearsetPOC/force-app/main/default/objects/Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Member__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription_Confirm_Date__c</columns>
    <columns>Subscription_Type_Name__c</columns>
    <columns>Order_Number__c</columns>
    <columns>VAT_Status__c</columns>
    <columns>TECH_VAT__c</columns>
    <columns>Invoice_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Not Started</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>4/1/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>