GearsetPOC/force-app/main/default/objects/Subscription__c/listViews/Copy_of_Expired.listView-meta.xml
<ListView>
    <fullName>Copy_of_Expired</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Invoice_Account__c</columns>
    <columns>Cancellation_date__c</columns>
    <columns>Full_Subscription_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment_Method__c</columns>
    <columns>Order_Reference__c</columns>
    <columns>Subscription_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled</label>
</ListView>