GearsetPOC/force-app/main/default/objects/Subscription__c/listViews/Expired.listView-meta.xml
<ListView>
    <fullName>Expired</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Invoice_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>End_Date__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Order_Reference__c</columns>
    <columns>Subscription_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired</label>
</ListView>