GearsetPOC/force-app/main/default/objects/Subscription__c/listViews/LatestInvoiceNumber.listView-meta.xml
<ListView>
    <fullName>LatestInvoiceNumber</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Member__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription_Confirm_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Inactive,Pending Payment,Not Started,Cancelled,Expired,New</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>LatestInvoiceNumber</label>
</ListView>