GearsetPOC/force-app/main/default/objects/Subscription__c/listViews/Payment_awaiting.listView-meta.xml
<ListView>
    <fullName>Payment_awaiting</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Invoice_Account__c</columns>
    <columns>Subscription_Type_Name__c</columns>
    <columns>Full_Subscription_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Date__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Order_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Payment</value>
    </filters>
    <label>Payment awaiting</label>
</ListView>