GearsetPOC/force-app/main/default/objects/Subscription__c/listViews/Subs_Ending_Today_To_Be_Expired.listView-meta.xml
<ListView>
    <fullName>Subs_Ending_Today_To_Be_Expired</fullName>
    <booleanFilter>2 AND (1 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>New_Extended_End_Date__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Member__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>New_Extended_End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Subs Ending Today - To Be Expired</label>
</ListView>