GearsetPOC/force-app/main/default/objects/Subscription__c/listViews/Subs_Updated_Manually_Lana.listView-meta.xml
<ListView>
    <fullName>Subs_Updated_Manually_Lana</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Order_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CIN_V2__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Member__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Lana Went</value>
    </filters>
    <label>Subs Updated Manually (Lana)</label>
</ListView>